Update tutorial notebook

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -128,25 +128,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's take a look at the data and perform some basic exploratory data analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of entries: 100004\n",
+      "Number of ratings: 100004\n",
       "Number of unique movieId's: 9066\n",
-      "Number of unique users: 671\n"
+      "Number of unique users: 671\n",
+      "Average number of ratings per user: 149.04\n",
+      "Average number of ratings per movie: 11.03\n"
      ]
     }
    ],
    "source": [
-    "print(\"Number of entries:\", ratings.shape[0])\n",
-    "print(\"Number of unique movieId's:\", ratings['movieId'].nunique())\n",
-    "print(\"Number of unique users:\", ratings['userId'].nunique())"
+    "n_ratings = len(ratings)\n",
+    "n_movies = ratings['movieId'].nunique()\n",
+    "n_users = ratings['userId'].nunique()\n",
+    "\n",
+    "print(\"Number of ratings:\", n_ratings)\n",
+    "print(\"Number of unique movieId's:\", n_movies)\n",
+    "print(\"Number of unique users:\", n_users)\n",
+    "print(\"Average number of ratings per user:\", round(n_ratings/n_users, 2))\n",
+    "print(\"Average number of ratings per movie:\", round(n_ratings/n_movies, 2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
